# skynet

./: .gitignore  CMakeLists.txt  Skynet  eval.py
datapoc/: db.py  toJson.py  user.py
datapoc/data100k/: item.json  like.json  tests.json  user.json  view.json
datapoc/ml-100k/: 1.base  1.test  item.json
datapoc/stats/: average.py
datapoc/test/: clustermovies
exp/: Makefile  eval.json  evaluate.json  evaluatelike.json  evaluatelikeview.json  evaluatemoviesusers.json  evalueateuser.json  exploit.json  like.json  likeview.json  manmovies  moviesusers.json  rq.json  test  test.json  test.x  test2.json  test2.x  users.json  usertype.json  usertypelike.json
includes/: chanel.hpp
includes/Data/: DbObject.hpp  DbReader.hpp  Exporter.hpp  Extract.hpp
includes/Manager/: AManager.hpp  Exporter.hpp  Interpreter.hpp  MainManager.hpp  Network.hpp  Request.hpp
includes/Neuronal/: Excitable.hpp  Experience.hpp  LearningSession.hpp  Network.hpp  Neuron.hpp
includes/Neuronal/Experiences/: SupervisedExperience.hpp  UnsupervisedExperience.hpp
includes/Neuronal/LearningSession/: SupervisedSession.hpp  UnsupervisedSession.hpp
includes/Neuronal/Loader/: Loader.hpp  SessionLoader.hpp
includes/Neuronal/Network/: MLPerceptron.hpp  Perceptron.hpp  PerceptronLayer.hpp  SelfOrganizingMap.hpp  SimplePerceptron.hpp  SupervisedNetwork.hpp
includes/Neuronal/Neuron/: MLP.hpp  Perceptron.hpp  SelfOrganizingMapNeuron.hpp  Simple.hpp
includes/Tools/: Utils.hpp
includes/Tools/Math/: Function.hpp
srcs/: main.cpp  thriftServer.cpp
srcs/Data/: DbObject.cpp  DbReader.cpp  Exporter.cpp  Extract.cpp
srcs/Manager/: AManager.cpp  Exporter.cpp  Interpreter.cpp  MainManager.cpp  Network.cpp  Request.cpp
srcs/Neuronal/: Excitable.cpp  Experience.cpp  LearningSession.cpp  Neuron.cpp
srcs/Neuronal/Experiences/: SupervisedExperience.cpp  UnsupervisedExperience.cpp
srcs/Neuronal/LearningSession/: SupervisedSession.cpp  UnsupervisedSession.cpp
srcs/Neuronal/Loader/: Loader.cpp  SessionLoader.cpp
srcs/Neuronal/Network/: MLPerceptron.cpp  Perceptron.cpp  PerceptronLayer.cpp  SelfOrganizingMap.cpp  SimplePerceptron.cpp  SupervisedNetwork.cpp
srcs/Neuronal/Neuron/: MLP.cpp  Perceptron.cpp  SelfOrganizingMapNeuron.cpp  Simple.cpp
srcs/Tools/: Utils.cpp
srcs/Tools/Math/: Function.cpp
